<resources>
    <string name="app_name">ModernNotesApp</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes_text">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="tap_and_start_typing">Tap and start typing...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="add_url">Add URL</string>
    <string name="write_url">Write URL</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="sure_delete_note">Are You Sure to delete this note?</string>

</resources>